CMAKE_MINIMUM_REQUIRED( VERSION 2.8.3 )

PROJECT( yMine )

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

IF( MSVC )
	ADD_DEFINITIONS(-D_VARIADIC_MAX=10)
ENDIF(MSVC)

FIND_PACKAGE(Threads)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)